Rodape pronto e fixo

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         <h1>DrivenEats</h1>
         <p>Sua comida em 6 minutos</p>
     </div>
+    <div class="footer">
+        <div>Selecione os 3 itens <br> para fechar o pedido</div>
+    </div>
 </body>
 </html>
