--- a/index.html
+++ b/index.html
@@ -19,8 +19,79 @@
         <h1>DrivenEats</h1>
         <p>Sua comida em 6 minutos</p>
     </div>
+    <div class="main">
+        <div class="menu">
+            <p>Primeiro, seu prato</p>
+            <div class="opcoes">
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/frango_yin_yang.png"/>
+                    <p>Frango Yin Yang</p>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <p>R$ 14,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/frango_yin_yang.png"/>
+                    <p>Frango Yin Yang</p>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <p>R$ 14,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/frango_yin_yang.png"/>
+                    <p>Frango Yin Yang</p>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <p>R$ 14,90</p>
+                </div>
+            </div>
+        </div>
+        <div class="menu">
+            <p>Agora, sua bebida</p>
+            <div class="opcoes">
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/coca-cola.png"/>
+                    <p>Coquinha gelada</p>
+                    <p>Lata 350ml</p>
+                    <p>R$ 4,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/coca-cola.png"/>
+                    <p>Coquinha gelada</p>
+                    <p>Lata 350ml</p>
+                    <p>R$ 4,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/coca-cola.png"/>
+                    <p>Coquinha gelada</p>
+                    <p>Lata 350ml</p>
+                    <p>R$ 4,90</p>
+                </div>
+            </div>
+        </div>
+        <div class="menu">
+            <p>Por fim, sua sobremesa</p>
+            <div class="opcoes">
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/pudim.png"/>
+                    <p>Pudim</p>
+                    <p>Apenas pudim</p>
+                    <p>R$ 7,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/pudim.png"/>
+                    <p>Pudim</p>
+                    <p>Apenas pudim</p>
+                    <p>R$ 7,90</p>
+                </div>
+                <div class="item">
+                    <img src="./projeto__driven-eats__imagens/pudim.png"/>
+                    <p>Pudim</p>
+                    <p>Apenas pudim</p>
+                    <p>R$ 7,90</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer">
-        <div>Selecione os 3 itens <br> para fechar o pedido</div>
+        <button disabled>Selecione os 3 itens <br> para fechar o pedido</button>
     </div>
 </body>
 </html>
