--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                 </div>
                 <div onclick="seleciona(this, '.prato')" class="item">
                     <img src="./projeto__driven-eats__imagens/frango_yin_yang.png"/>
-                    <p>Frango Yin Yang</p>
-                    <p>Um pouco de batata, um pouco de salada</p>
+                    <p>Carninha com cenoura</p>
+                    <p>Um pouco de carne, um pouco de cenoura</p>
                     <div>
-                        <p class="preco">R$ 14,90</p>
+                        <p class="preco">R$ 24,49</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>  
                 </div>
                 <div onclick="seleciona(this, '.prato')" class="item">
                     <img src="./projeto__driven-eats__imagens/frango_yin_yang.png"/>
-                    <p>Frango Yin Yang</p>
-                    <p>Um pouco de batata, um pouco de salada</p>
+                    <p>Peixe do laguinho</p>
+                    <p>Diretamente do córrego, um pouco de salada</p>
                     <div>
-                        <p class="preco">R$ 14,90</p>
+                        <p class="preco">R$ 20,30</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>  
                 </div>
@@ -66,19 +66,19 @@
                 </div>
                 <div onclick="seleciona(this, '.bebida')" class="item">
                     <img src="./projeto__driven-eats__imagens/coca-cola.png"/>
-                    <p>Coquinha gelada</p>
+                    <p>Fantinha uva</p>
                     <p>Lata 350ml</p>
                     <div>
-                        <p class="preco">R$ 4,90</p>
+                        <p class="preco">R$ 5,80</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
                 <div onclick="seleciona(this, '.bebida')" class="item">
                     <img src="./projeto__driven-eats__imagens/coca-cola.png"/>
-                    <p>Coquinha gelada</p>
+                    <p>Guarana zero</p>
                     <p>Lata 350ml</p>
                     <div>
-                        <p class="preco">R$ 4,90</p>
+                        <p class="preco">R$ 3,40</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
@@ -98,19 +98,19 @@
                 </div>
                 <div onclick="seleciona(this, '.sobremesa')" class="item">
                     <img src="./projeto__driven-eats__imagens/pudim.png"/>
-                    <p>Pudim</p>
-                    <p>Apenas pudim</p>
+                    <p>Sundae</p>
+                    <p>Apenas sundae</p>
                     <div>
-                        <p class="preco">R$ 7,90</p>
+                        <p class="preco">R$ 12,90</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
                 <div onclick="seleciona(this, '.sobremesa')" class="item">
                     <img src="./projeto__driven-eats__imagens/pudim.png"/>
-                    <p>Pudim</p>
-                    <p>Apenas pudim</p>
+                    <p>Mouse</p>
+                    <p>de maracujá</p>
                     <div>
-                        <p class="preco">R$ 7,90</p>
+                        <p class="preco">R$ 9,50</p>
                         <ion-icon name="checkmark-circle"></ion-icon>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div class="footer">
-        <button disabled>Selecione os 3 itens <br> para fechar o pedido</button>
+        <button onclick="fechaPedido()" disabled>Selecione os 3 itens <br> para fechar o pedido</button>
     </div>
 </body>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
