--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>TOTAL</p>
                 <p class="total"></p>
             </div>
-            <button>Tudo certo, pode pedir!</button>
+            <button onclick="confirma()">Tudo certo, pode pedir!</button>
             <button onclick="cancela()">Cancelar</button>
         </div>
     </div>
